# stco

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: 01-lint-format-test.yml  02-publish-to-pypi.yml
examples/: 01-example-usage.ipynb  01-simple-example.ipynb  02-accident-example.ipynb  03-selecting-adbscan-params.ipynb  STCEC.md  mn_accidents.geojson
scripts/: run_tests.sh
stco/: clustering.py
