[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stco"
version = "0.0.0"
description = "Algorithms for analyzing the stability of spatial clusters over time"
readme = "README.md"
authors = [{ name = "Luke Zaruba", email = "lukeazaruba@gmail.com" }]
license = { file = "LICENSE" }
requires-python = '>=3.10'
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "contextily",
    "esda",
    "geopandas",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "shapely",
    "tqdm"
]

[project.urls]
repository = 'https://github.com/lukezaruba/stco'

[project.optional-dependencies]
dev = ["bumpver", "black", "isort", "pre_commit"]

[tool.bumpver]
current_version = "0.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"stco/__init__.py" = ["{version}"]